Pulse initial checkin for Android 13 [1/2]
@neobuddy89:
* Adapted for A13 - removed dagger dependencies, PulseController interfaces, unused listeners.
* Pulses disabled by default - following AOSP / LOS behavior.
* This includes few of NPE fixes and improvements.
* Android 12 removed colored notifications in ff165814e10cf757981d1e0254bd88473dff126e,
  so retire pulse color based on album art till we find other way.

----
ezio:

big squash here to handle Android 11 changes,
check external pulse tree to know who contributed
to this epic feature that Randall made back in the days
(yeah, we're getting old) :D

some mentions: neobuddy89, Alex Cruz, LorDClockaN, varund7726

ps: now when the the new qs media player notification is enabled,
a different call to media processor is done by the mediadatamanager
in packages/SystemUI/src/com/android/systemui/media/, that's why the
need of MediaDataManager.Listener in NotificationMediaManager.
reminder for myself:  we can acces properties of kotlin "data" classes
like MediaData.kt just calling a built-in getter (like getBackgroundColor
for the backgroundColor prop). For reference, it's also possible to call
straihgt mediaData.background color but only after adding the @JvmField
flag to the prop declaration

Change-Id: I0205f8ba6b8883012d1b809de9a33f6391c4cf0c
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>

--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -384,6 +384,9 @@
     <!-- To be able to intercept meta key events, might need to be removed once b/358569822
          is ready -->
     <uses-permission android:name="android.permission.OVERRIDE_SYSTEM_KEY_BEHAVIOR_IN_FOCUSED_WINDOW" />
+    
+    <!-- Pulse -->
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 
     <protected-broadcast android:name="com.android.settingslib.action.REGISTER_SLICE_RECEIVER" />
     <protected-broadcast android:name="com.android.settingslib.action.UNREGISTER_SLICE_RECEIVER" />
